--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>ND Tech</title>
+    <title>Tugas Akhir</title>
     <link rel="shortcut icon" href="images/nd-svg.png" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -84,19 +84,15 @@
     <footer class="tidakberwarna" id="footer">
       <div class="container-fluid">
         <div class="footer-icon">
-          <a href="mailto:andimuhammadsatriafadhil77@gmail.com"
+          <a href="mailto:rifqidirga160302@gmail.com"
             ><i class="fa-icon fa-solid fa-envelope"></i
           ></a>
-          <a
-            href="https://www.linkedin.com/in/andi-muhammad-satria-fadhil-5a0235238/"
-            ><i class="fa-icon fa-brands fa-linkedin"></i
-          ></a>
-          <a href="https://www.instagram.com/andi_m_s_fadhil/"
+          <a href="https://www.instagram.com/rifqi.dirga/"
             ><i class="fa-icon fa-brands fa-instagram"></i
           ></a>
         </div>
 
-        <p>© Copyright Andi Muhammad S F</p>
+        <p>© Copyright Rifqi Asyofi Dirga</p>
       </div>
     </footer>
   </body>
