--- a/views/user.ejs
+++ b/views/user.ejs
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>ND Tech</title>
+        <title>Tugas Akhir</title>
     
-        <link rel="shortcut icon" href="images/nd-svg.png" />
+        <link rel="shortcut icon" href="images/yoasobi_logo.png" />
         <!-- Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -41,7 +41,7 @@
         <div class="container-fluid">
             <!-- Nav Bar -->
             <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand" href="">Tugas Akhir </a>
+                <a class="navbar-brand" href="">Library of Yoasobi </a>
                 <button
                     class="navbar-toggler"
                     type="button"
@@ -64,9 +64,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/journal">Journal</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/logout">Logout</a>
-                        </li>
                     </ul>
                 </div>
             </nav>
@@ -76,29 +73,13 @@
         <div class="row">
             <div class="col-lg-6">
               <h1 class="title-text">
-                Buat Journal Harian Kamu Sekarang, dan Lihatlah Progressnya!
+                Tempat untuk mencari informasi menarik seputar band Yoasobi!
               </h1>
-              <button
-                type="button"
-                class="btn btn-dark btn-lg download-button github_button"
-              >
-                <i class="fa fa-github" aria-hidden="true"></i>
-                <a class="compose github" href="https://github.com/AndiMSF"
-                  >GitHub</a
-                >
-              </button>
-              <button
-                type="button"
-                class="btn btn-outline-light btn-lg download-button"
-              >
-                <i class="fa fa-plus" aria-hidden="true"></i>
-                <a class="compose" href="/journal">Make It Now !</a>
-              </button>
             </div>
             <div class="col-lg-6">
               <img
                 class="title-image"
-                src="/images/adventurer.png"
+                src="/images/yoasobi.png"
                 alt="journey-mockup"
               />
             </div>
@@ -110,27 +91,28 @@
             <div class="container-fluid">
               <div class="row">
                 <div class="feature-box col-md-12 col-lg-4">
-                  <i class="fa-solid fa-circle-check fa-5x feature-logo"></i>
+                  <i class="fa-solid fa-user fa-5x feature-logo"></i>
       
-                  <h3 class="features-h3">Easy</h3>
-                  <p>Ketik Dan Kirim Dalam Hitungan Detik!</p>
+                  <h3 class="features-h3">Bio</h3>
+                  <p>Bio Yoasobi</p>
                 </div>
       
                 <div class="feature-box col-md-12 col-lg-4">
-                  <i class="fa-solid fa-bullseye fa-5x feature-logo"></i>
+                  <i class="fa-solid fa-book fa-5x feature-logo"></i>
       
-                  <h3 class="features-h3">Achieve</h3>
-                  <p>Kejar Targetmu!</p>
+                  <h3 class="features-h3">Album</h3>
+                  <p>Album</p>
                 </div>
       
                 <div class="feature-box col-md-12 col-lg-4">
-                  <i class="fa-solid fa-heart fa-5x feature-logo"></i>
-                  <h3 class="features-h3">Bermanfaat</h3>
-                  <p>Website Ini Bermanfaat Untuk Perjalanan Hidup Kamu!</p>
+                  <i class="fa-solid fa-camera fa-5x feature-logo"></i>
+                  <h3 class="features-h3">Galeri</h3>
+                  <p>Galeri</p>
                 </div>
               </div>
             </div>
           </section>
+
           <!-- SECTION 3 -->
           <section class="berwarna" id="about">
             <div
@@ -141,39 +123,36 @@
               <div class="carousel-inner">
                 <div class="carousel-item active container-fluid">
                   <h2 class="testimonial-text">
-                    Website Yang Simple Dan Elegan, Digunakan Untuk Mencatat
-                    Perjalanan Kalian!
+                    (小説を音楽にする) "We make novel into music."
                   </h2>
                   <img
                     class="testimonial-img"
-                    src="/images/AndiProfile.png"
-                    alt="andy-profile"
+                    src="/images/Ayase_icon.png"
+                    alt="ayase-profile"
                   />
-                  <em>Andi Muhammad S F</em>
+                  <em>- motto YOASOBI -</em>
                 </div>
                 <div class="carousel-item container-fluid">
                   <h2 class="testimonial-text">
-                    Apapun Yang Kamu Catat Disini, Kamu Bisa Tahu Apa Yang Telah Kamu
-                    Kerjakan
+                    "Everything is necessary now. You don't have to worry about comparing yourself to others."
                   </h2>
                   <img
                     class="testimonial-img"
-                    src="images/notepad.png"
+                    src="images/Ikura_icon.png"
                     alt="note-profile"
                   />
-                  <em>Hamba Allah</em>
+                  <em>- motto Ikura -</em>
                 </div>
                 <div class="carousel-item container-fluid">
                   <h2 class="testimonial-text">
-                    Mari Kita Atur Hidup Kamu Lebih Teratur Dari Sekarang, Catat
-                    Apapun Yang Telah Kamu Buat!
+                    (Yoasobi) Night life
                   </h2>
                   <img
                     class="testimonial-img"
                     src="images/happiness.png"
                     alt="happiness-profile"
                   />
-                  <em>Hamba Allah</em>
+                  <em>- Yoasobi -</em>
                 </div>
               </div>
       
@@ -197,22 +176,26 @@
               </button>
             </div>
           </section>
+          
           <!-- FOOTER -->
           <footer class="tidakberwarna" id="footer">
             <div class="container-fluid">
               <div class="footer-icon">
-                <a href="mailto:andimuhammadsatriafadhil77@gmail.com"
-                  ><i class="fa-icon fa-solid fa-envelope"></i
+                <a href="https://open.spotify.com/intl-id/artist/64tJ2EAv1R6UaZqc4iOCyj"
+                  ><i class="fa-icon fa-brands fa-spotify"></i
                 ></a>
-                <a href="https://www.linkedin.com/in/andi-muhammad-satria-fadhil-5a0235238/">
-                  <i class="fa-icon fa-brands fa-linkedin"></i>
+                <a href="https://www.youtube.com/@Ayase_YOASOBI">
+                  <i class="fa-icon fa-brands fa-youtube"></i>
                 </a>
-                <a href="https://www.instagram.com/andi_m_s_fadhil/"
+                <a href="https://www.instagram.com/yoasobi_staff_/"
                   ><i class="fa-icon fa-brands fa-instagram"></i
+                ></a>
+                <a href="https://www.tiktok.com/@yoasobi_ayase_ikura"
+                  ><i class="fa-icon fa-brands fa-tiktok"></i
                 ></a>
               </div>
       
-              <p>© Copyright Andi Muhammad S F</p>
+              <p>© Copyright Rifqi Asyofi Dirga</p>
             </div>
           </footer>
   </body>
