--- a/public/css/home.css
+++ b/public/css/home.css
@@ -17,7 +17,7 @@ h1,h2,h3,h4,h5,h6{
     padding: 7% 15%
 }
 .berwarna{
-    background-color: #2682ec;
+    background-color: #ff0a5c;
 }
 .tidakberwarna{
     background-color: #fff;
@@ -147,14 +147,14 @@ a:hover {
 }
 
 .feature-logo{
-    color:#ff4c68;
+    color:#ff0a5c;
     margin-bottom:1rem;
 }
 
 /* Testimonials */
 
 #about{   
-    background-color:#2682ec;
+    background-color:#ff0a5c;
     color:#fff;
 }
 
