--- a/views/user.ejs
+++ b/views/user.ejs
@@ -38,80 +38,39 @@
 
 <body>
     <section class="berwarna" id="title">
-        <div class="container-fluid">
-            <!-- Nav Bar -->
-            <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand" href="">Library of Yoasobi </a>
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#Toggler"
-                    aria-controls="navbarTogglerDemo01"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="Toggler">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#footer">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#features">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/journal">Journal</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+    <!-- Nav Bar -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <a class="navbar-brand" href="">Library of Yoasobi </a>
+    </nav>
 
-            <!-- Title -->
-               <!-- Title -->
-        <div class="row">
-            <div class="col-lg-6">
-              <h1 class="title-text">
-                Tempat untuk mencari informasi menarik seputar band Yoasobi!
-              </h1>
+    <!-- Gambar jadi background -->
+    <div class="image-overlay">
+      <!-- Section 2 ditaruh di atas gambar -->
+      <section id="features">
+        <h1>Tempat untuk mencari informasi <br> seputar band Yoasobi!</h1>
+        <div class="image-fluid">
+          <div class="row">
+            <div class="feature-box col-md-12 col-lg-4">
+              <a href="/bio" style="text-decoration: none; color: inherit;">
+                <i class="fa-solid fa-user fa-4x feature-logo"></i>
+                <h3 class="features-h3">Bio</h3>
+              </a>
             </div>
-            <div class="col-lg-6">
-              <img
-                class="title-image"
-                src="/images/yoasobi.png"
-                alt="journey-mockup"
-              />
+
+            <div class="feature-box col-md-12 col-lg-4">
+              <i class="fa-solid fa-book fa-4x feature-logo"></i>
+              <h3 class="features-h3">Album</h3>
+            </div>
+
+            <div class="feature-box col-md-12 col-lg-4">
+              <i class="fa-solid fa-camera fa-4x feature-logo"></i>
+              <h3 class="features-h3">Galeri</h3>
             </div>
           </div>
-
-          <!-- SECTION 2 -->
-
-          <section class="tidakberwarna" id="features">
-            <div class="container-fluid">
-              <div class="row">
-                <div class="feature-box col-md-12 col-lg-4">
-                  <i class="fa-solid fa-user fa-5x feature-logo"></i>
-      
-                  <h3 class="features-h3">Bio</h3>
-                  <p>Bio Yoasobi</p>
-                </div>
-      
-                <div class="feature-box col-md-12 col-lg-4">
-                  <i class="fa-solid fa-book fa-5x feature-logo"></i>
-      
-                  <h3 class="features-h3">Album</h3>
-                  <p>Album</p>
-                </div>
-      
-                <div class="feature-box col-md-12 col-lg-4">
-                  <i class="fa-solid fa-camera fa-5x feature-logo"></i>
-                  <h3 class="features-h3">Galeri</h3>
-                  <p>Galeri</p>
-                </div>
-              </div>
-            </div>
-          </section>
+        </div>
+      </section>
+    </div>
+  </section>
 
           <!-- SECTION 3 -->
           <section class="berwarna" id="about">
