--- a/public/css/home.css
+++ b/public/css/home.css
@@ -16,6 +16,10 @@ h1,h2,h3,h4,h5,h6{
 .container-fluid{
     padding: 7% 15%
 }
+
+.image-fluid{
+    padding: 0 15%
+}
 .berwarna{
     background-color: #ff0a5c;
 }
@@ -45,14 +49,25 @@ h1,h2,h3,h4,h5,h6{
     
 }
 
+
+
 /* Title  */
 #title{
     color:#fff;
-    height: 100vh;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
 }
 
-#title .container-fluid{
-    padding: 3% 13% 18%;
+#title nav {
+padding: 0 5%;
+}
+
+
+#title img {
+    width: 100%;
+    object-fit: contain;
 }
 
 
@@ -122,9 +137,38 @@ a:hover {
 }
 
 /* Features */
+.image-overlay {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-image: url('/images/yoasobi.png');
+  background-size: cover;
+  background-position: center;
 
-#features { 
-    position:relative;
+  display: flex;
+  justify-content:center;
+  align-items: flex-end;
+  
+}
+
+.image-overlay::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.5); /* Overlay hitam semi-transparan */
+  z-index: 1;
+}
+#features {
+  position: relative;
+  z-index: 2;
+  color: white;
+  width: 100%;
+  margin-bottom: 2rem; /* Opsional */
+}
+
+#features h1 {
+    margin-bottom: 50px;
+    font-weight: 600;
 }
 
 .feature-box {  
