--- a/views/user.ejs
+++ b/views/user.ejs
@@ -58,8 +58,10 @@
             </div>
 
             <div class="feature-box col-md-12 col-lg-4">
+              <a href="/album" style="text-decoration: none; color: inherit;">
               <i class="fa-solid fa-book fa-4x feature-logo"></i>
               <h3 class="features-h3">Album</h3>
+              </a>
             </div>
 
             <div class="feature-box col-md-12 col-lg-4">
