--- a/views/album.ejs
+++ b/views/album.ejs
@@ -48,7 +48,7 @@
     </section>
         <section class="container_parent album1">
             <div class="left_album">
-                <img src="/images/yoasobi.png" alt="">
+                <img src="/images/thebook.png" alt="">
             </div>
             <div class="right_album">
                 <div class="top_album">
@@ -56,10 +56,13 @@
                 </div>
                 <div class="list_lagu">
                     <ul>
-                        <li>Lagu 1</li>
-                        <li>Lagu 2</li>
-                        <li>Lagu 3</li>
-                        <li>Lagu 4</li>
+                        <li>Encore : Klik Disini</li>
+                        <li>Halzion : Klik Disini</li>
+                        <li>Tracing a Dream : Klik Disini</li>
+                        <li>Tabun : Klik Disini</li>
+                        <li>Gunjou : Klik Disini</li>
+                        <li>Haruka : Klik Disini</li>
+                        <li>Yoru ni Kakeru : Klik Disini</li>
                     </ul>
                 </div>
             </div>
@@ -67,18 +70,22 @@
 
         <section class="container_parent album2">
             <div class="left_album">
-                <img src="/images/yoasobi.png" alt="">
+                <img src="/images/thebook2.png" alt="">
             </div>
             <div class="right_album">
                 <div class="top_album">
-                    <h1>The Book</h1>
+                    <h1>The Book 2</h1>
                 </div>
                 <div class="list_lagu">
                     <ul>
-                        <li>Lagu 1</li>
-                        <li>Lagu 2</li>
-                        <li>Lagu 3</li>
-                        <li>Lagu 4</li>
+                        <li>Tsubame : Klik Disini</li>
+                        <li>RGB : Klik Disini</li>
+                        <li>Romance : Klik Disini</li>
+                        <li>Mou Sukoshi Dake : Klik Disini</li>
+                        <li>Comet : Klik Disini</li>
+                        <li>Kaibutsu : Klik Disini</li>
+                        <li>Moshi mo Inochi ga Egaketara : Klik Disini</li>
+                        <li>Love Letter : Klik Disini</li>
                     </ul>
                 </div>
             </div>
@@ -86,18 +93,22 @@
 
         <section class="container_parent album3">
             <div class="left_album">
-                <img src="/images/yoasobi.png" alt="">
+                <img src="/images/thebook3.png" alt="">
             </div>
             <div class="right_album">
                 <div class="top_album">
-                    <h1>The Book</h1>
+                    <h1>The Book 3</h1>
                 </div>
                 <div class="list_lagu">
                     <ul>
-                        <li>Lagu 1</li>
-                        <li>Lagu 2</li>
-                        <li>Lagu 3</li>
-                        <li>Lagu 4</li>
+                        <li>Yuusha : Klik Disini</li>
+                        <li>Shukufuku : Klik Disini</li>
+                        <li>Umi no Manimani : Klik Disini</li>
+                        <li>Mr. : Klik Disini</li>
+                        <li>Idol : Klik Disini</li>
+                        <li>Seventeen : Klik Disini</li>
+                        <li>Adventure : Klik Disini</li>
+                        <li>Sukida : Klik Disini</li>
                     </ul>
                 </div>
             </div>
