--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -32,7 +32,7 @@
     ></script>
 
     <!-- CSS Stylesheet -->
-    <link rel="stylesheet" href="css/journal.css" />
+    <link rel="stylesheet" href="css/admin.css" />
   </head>
 
   <body>
@@ -40,60 +40,28 @@
       <div class="container-fluid layer1">
         <!-- Nav Bar -->
         <nav class="navbar navbar-expand-lg navbar-dark">
-          <a class="navbar-brand" href="">Journal</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#Toggler"
-            aria-controls="navbarTogglerDemo01"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="Toggler">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="/userhome">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/logout">Logout</a>
-            </li>
-              <li class="nav-item">
-                <button
-                  type="button"
-                  class="btn btn-dark btn-lg download-button"
-                >
-                  <i class="fa fa-plus" aria-hidden="true"></i>
-                  <a class="compose" href="/compose">Compose</a>
-                </button>
-              </li>
-            </ul>
-          </div>
+          <a class="navbar-brand" href="">Admin</a>
         </nav>
       </div>
     </section>
 
-    <!-- Features -->
+    <section class="parents_container">
 
-    
-
-    <!-- Footer -->
-
-    <footer class="tidakberwarna" id="footer">
-      <div class="container-fluid">
-        <div class="footer-icon">
-          <a href="mailto:rifqidirga160302@gmail.com"
-            ><i class="fa-icon fa-solid fa-envelope"></i
-          ></a>
-          <a href="https://www.instagram.com/rifqi.dirga/"
-            ><i class="fa-icon fa-brands fa-instagram"></i
-          ></a>
-        </div>
-
-        <p>© Copyright Rifqi Asyofi Dirga</p>
+      <div class="top_container">
+        <h1>Pengaturan</h1>
       </div>
-    </footer>
+
+        <div class="down_container">
+          <div class="album">
+            <i class="fa-solid fa-gear"></i>
+            <h1>Album</h1>
+          </div>
+          <div class="galeri">
+            <i class="fa-solid fa-gear"></i>
+            <h1>Galeri</h1>
+          </div>
+        </div>
+      </section>
+
   </body>
 </html>
