--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,11 +1,11 @@
 body{
     font-family: 'Montserrat-Black', sans-serif;
     text-align: center;
-
 }
 
 h1,h2,h3,h4,h5,h6{
     font-family: 'Montserrat-Black', sans-serif;
+    margin: 0;
 }
 
 .container-fluid{
@@ -155,23 +155,59 @@ p{
     cursor:grab;
 }
 
-/* Footer */
-.footer-icon{
-    padding-top:2.5rem;
-    padding-bottom:1rem;
+
+/* Parent Container */
+
+.parents_container {
+    background-color: black;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
-.fa-icon{
-    padding:0 1rem;
+.top_container {
+    height: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-a {
-    color: black;
-    text-decoration: none;
+.down_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    height: 70%;
+    gap: 50px;
+    padding: 0 50px;
 }
 
-a:hover {
-    color:#00A0C6; 
-    text-decoration:none; 
-    cursor:pointer;  
+.top_container h1 {
+    font-size: 3rem;
+    color: white;
+    font-weight: 600;
 }
+
+.down_container .album, .down_container .galeri {
+    display: flex;
+    color: white;
+    gap: 10px;
+    background: #7FA1FF;
+    padding: 10px 80px;
+    border-radius: 40px;
+    cursor: pointer;
+}
+
+.down_container i {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.down_container h1{
+    font-size: 2rem;
+    color: white;
+}
+
+
