--- a/public/css/add-gallery.css
+++ b/public/css/add-gallery.css
@@ -175,22 +175,25 @@ p{
 .down_container {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
+    align-items: center;
     height: 70%;
-    gap: 50px;
-    padding: 0 50px;
+    gap: 10px;
+    padding: 50px;
 }
 
+.top_container h1 {
+    font-size: 3rem;
+    color: white;
+    font-weight: 600;
+}
 
-.down_container .album, .down_container .galeri {
+.down_container .galeri {
     display: flex;
     color: white;
     gap: 10px;
     background: #7FA1FF;
     padding: 10px 80px;
     border-radius: 40px;
-    cursor: pointer;
 }
 
 .down_container i {
@@ -205,4 +208,46 @@ p{
     color: white;
 }
 
+.form_container {
+  background-color: #000000;
+  padding: 40px;
+  border-radius: 15px;
+}
+
+input[type="file"] {
+  margin: auto;
+  max-width: 300px;
+}
+
+h2 {
+  color: #ffffff;
+}
+
+.btn-primary {
+  background-color: #7c9eff;
+  border: none;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.btn-primary i {
+  font-size: 16px;
+}
+
+
+.btn-primary:hover {
+  background-color: #5c7bdc;
+  border-color: #5c7bdc;
+}
+
+button {
+    display: flex;
+    flex-direction: column;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 150px;
+}
 
