--- a/views/admin_album.ejs
+++ b/views/admin_album.ejs
@@ -32,7 +32,7 @@
     ></script>
 
     <!-- CSS Stylesheet -->
-    <link rel="stylesheet" href="css/admin.css" />
+    <link rel="stylesheet" href="/css/admin_album.css" />
   </head>
 
   <body>
