--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -172,6 +172,11 @@ p{
     align-items: center;
 }
 
+.top_container h1 {
+    font-weight: 600;
+    color: white;
+}
+
 .down_container {
     display: flex;
     flex-direction: column;
