--- a/views/admin_gallery.ejs
+++ b/views/admin_gallery.ejs
@@ -32,7 +32,7 @@
     ></script>
 
     <!-- CSS Stylesheet -->
-    <link rel="stylesheet" href="/css/admin_album.css" />
+    <link rel="stylesheet" href="/css/admin_gallery.css" />
   </head>
 
   <body>
@@ -40,7 +40,7 @@
       <div class="container-fluid layer1">
         <!-- Nav Bar -->
         <nav class="navbar navbar-expand-lg navbar-dark">
-          <a class="navbar-brand" href="/admin">Album</a>
+          <a class="navbar-brand" href="/admin">Gallery</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -66,7 +66,7 @@
                   class="btn btn-dark btn-lg download-button"
                 >
                   <i class="fa fa-plus" aria-hidden="true"></i>
-                  <a class="compose" href="/admin/add-album">ADD</a>
+                  <a class="compose" href="/admin/add-gallery">ADD</a>
                 </button>
               </li>
             </ul>
