--- a/views/user.ejs
+++ b/views/user.ejs
@@ -64,10 +64,10 @@
               </a>
             </div>
 
-            <div class="feature-box col-md-12 col-lg-4">
+            <a href="#about" class="feature-box col-md-12 col-lg-4" style="color: white;">
               <i class="fa-solid fa-camera fa-4x feature-logo"></i>
-              <h3 class="features-h3">Galeri</h3>
-            </div>
+              <h3 href="#about" class="features-h3">Galeri</h3>
+            </a>
           </div>
         </div>
       </section>
