--- a/public/css/add-album-2.css
+++ b/public/css/add-album-2.css
@@ -2,6 +2,7 @@ body{
     font-family: 'Montserrat-Black', sans-serif;
     text-align: center;
 }
+
 a {
   text-decoration: none; /* Hilangkan garis bawah */
   color: inherit;         /* Gunakan warna dari parent, bukan biru default */
@@ -256,6 +257,23 @@ button {
 form {
     display: flex;
     flex-direction: column;
-    gap: 150px;
+    gap: 50px;
 }
 
+.mid {
+    display: flex;
+    gap: 20px;
+}
+
+.mid .left, .right{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.bottom {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
