--- a/public/css/admin_gallery.css
+++ b/public/css/admin_gallery.css
@@ -1,19 +1,11 @@
 body{
     font-family: 'Montserrat-Black', sans-serif;
     text-align: center;
-}
-a {
-  text-decoration: none; /* Hilangkan garis bawah */
-  color: inherit;         /* Gunakan warna dari parent, bukan biru default */
-}
-
-a:hover {
-    color: white;
+    background-color: black;
 }
 
 h1,h2,h3,h4,h5,h6{
     font-family: 'Montserrat-Black', sans-serif;
-    margin: 0;
 }
 
 .container-fluid{
@@ -29,12 +21,12 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .tidakberwarna{
-    background-color: #fff;
+    background-color: #000000;
     margin-bottom:0;
 }
 
 .tidakberwarna.post{
-    background-color: #fff;
+    background-color: #ffffff;
     text-align: left;
 }
 
@@ -44,7 +36,7 @@ section.post {
 
 /* Title  */
 #title{
-    color:#fff;
+    color:#ffffff;
 
 }
 
@@ -163,99 +155,23 @@ p{
     cursor:grab;
 }
 
-
-/* Parent Container */
-
-.parents_container {
-    background-color: black;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
+/* Footer */
+.footer-icon{
+    padding-top:2.5rem;
+    padding-bottom:1rem;
 }
 
-.top_container {
-    height: 30%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.fa-icon{
+    padding:0 1rem;
 }
 
-.down_container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 70%;
-    gap: 10px;
-    padding: 50px;
+a {
+    color: black;
+    text-decoration: none;
 }
 
-.top_container h1 {
-    font-size: 3rem;
-    color: white;
-    font-weight: 600;
+a:hover {
+    color:#00A0C6; 
+    text-decoration:none; 
+    cursor:pointer;  
 }
-
-.down_container .galeri {
-    display: flex;
-    color: white;
-    gap: 10px;
-    background: #7FA1FF;
-    padding: 10px 80px;
-    border-radius: 40px;
-}
-
-.down_container i {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.down_container h1{
-    font-size: 2rem;
-    color: white;
-}
-
-.form_container {
-  background-color: #000000;
-  padding: 40px;
-  border-radius: 15px;
-}
-
-input[type="file"] {
-  margin: auto;
-  max-width: 300px;
-}
-
-h2 {
-  color: #ffffff;
-}
-
-.btn-primary {
-  background-color: #7c9eff;
-  border: none;
-  font-weight: 500;
-  font-size: 16px;
-}
-
-.btn-primary i {
-  font-size: 16px;
-}
-
-
-.btn-primary:hover {
-  background-color: #5c7bdc;
-  border-color: #5c7bdc;
-}
-
-button {
-    display: flex;
-    flex-direction: column;
-}
-
-form {
-    display: flex;
-    flex-direction: column;
-    gap: 150px;
-}
-
