--- a/views/add-album.ejs
+++ b/views/add-album.ejs
@@ -32,7 +32,7 @@
     ></script>
 
     <!-- CSS Stylesheet -->
-    <link rel="stylesheet" href="/css/add-gallery.css" />
+    <link rel="stylesheet" href="/css/add-album.css" />
   </head>
 
   <body>
@@ -40,30 +40,46 @@
       <div class="container-fluid layer1">
         <!-- Nav Bar -->
         <nav class="navbar navbar-expand-lg navbar-dark">
-          <a class="navbar-brand" href="/admin/gallery">Add Gallery</a>
+          <a class="navbar-brand" href="/admin/gallery">Add Album</a>
         </nav>
       </div>
     </section>
 
     <section class="parents_container">
 
-        <div class="down_container">
-            <h1>Galeri</h1>  
+  <div class="down_container">
+    <div class="galeri">
+      <h1>Judul Album</h1>
+    </div>
 
-          <form id="galleryForm" enctype="multipart/form-data" method="POST" action="/upload">
+    <form id="galleryForm" method="POST" action="/upload">
       <div class="mb-3">
-        <input class="form-control" type="file" name="foto" id="foto" required />
+        <!-- Ganti file input ↴ menjadi text input -->
+        <input
+          class="form-control"
+          type="text"
+          name="foto"
+          id="foto"
+          placeholder="Masukkan Judul Album"
+          required
+        />
       </div>
+
       <div class="d-flex justify-content-center">
-       <button type="submit" class="btn btn-primary px-4 py-2 rounded-pill d-flex flex-row align-items-center gap-2">
-            <i class="fa-solid fa-square-check"></i>
-            <a href="/admin/gallery">Save</a>
-        </button>
+  <a
+    href="./add-album-2"
+    class="btn btn-primary px-4 py-2 rounded-pill d-flex flex-row align-items-center gap-2"
+  >
+    <i class="fa fa-chevron-right"></i>
+    <span>Next</span>
+  </a>
 </div>
 
     </form>
-        </div>
-      </section>
+  </div>
+
+</section>
+
 
   </body>
 </html>
