--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -40,7 +40,26 @@
       <div class="container-fluid layer1">
         <!-- Nav Bar -->
         <nav class="navbar navbar-expand-lg navbar-dark">
-          <a class="navbar-brand" href="">Admin</a>
+          <a class="navbar-brand">Homepage Admin</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#Toggler"
+            aria-controls="navbarTogglerDemo01"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="Toggler">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="/logout">Logout</a>
+            </li>
+
+            </ul>
+          </div>
         </nav>
       </div>
     </section>
@@ -53,12 +72,16 @@
 
         <div class="down_container">
           <div class="album">
+            <a href="/admin/album">
             <i class="fa-solid fa-gear"></i>
             <h1>Album</h1>
+            </a>
           </div>
           <div class="galeri">
+            <a href="/admin/gallery">
             <i class="fa-solid fa-gear"></i>
             <h1>Galeri</h1>
+            </a>
           </div>
         </div>
       </section>
